- updated dependencies & min SDK version to 28 - added permission requirements for activity_recognition, battery_optimizations, access_background_location - androidX - Added missing profile update scheduler with interval settings - replaced FileLoggers with Java RX observers - Formatted some code - Got rid of unnecessary String.valueOf calls Tested towards Samsung galaxy S6 lite

--- a/gpslogger/src/main/res/xml/pref_general.xml
+++ b/gpslogger/src/main/res/xml/pref_general.xml
@@ -50,6 +50,14 @@
         android:key="debugtofile"
         android:defaultValue="false"/>
 
+    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
+        android:key="profile_url"
+        android:title="@string/profile_url"/>
+
+    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
+        android:key="profile_url_interval"
+        android:title="@string/profile_url_interval"/>
+
     <Preference
         android:title="@string/debuglog_attach_to_email"
         android:summary="@string/debuglog_attach_to_email_summary"
